unpackaged/main/default/objects/Collections_Perm_Mod_Options_Rate__mdt/Collections_Perm_Mod_Options_Rate__mdt.object-meta.xml
<CustomObject>
    <description>PD-4619</description>
    <label>Collections Perm Mod Options Rate</label>
    <pluralLabel>Collections Perm Mod Options Rates</pluralLabel>
</CustomObject>