unpackaged/main/default/objects/Collections_Perm_Mod_Options_Rate__mdt/fields/Extension_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Extension_Fee_Rate__c</fullName>
    <label>Extension Fee Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Number</type>
</CustomField>