unpackaged/main/default/objects/Collections_Perm_Mod_Options_Rate__mdt/fields/Extension_Months__c.field-meta.xml
<CustomField>
    <fullName>Extension_Months__c</fullName>
    <label>Extension Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>